tests/fail/isinstance_union.py
a = 10

# Unions not allowed in second param
isinstance(a, int | float)
